@@ -22,8 +22,8 @@
         <setting ref="studioMonitor.monitor" name="displayPersistance" label="Persistance" type="slider" options="0.0,1.0"/>
         <setting ref="studioMonitor.monitor" name="compositeLumaBandwidth" label="Luma Bandwidth" type="slider" options="0.0,1.0"/>
         <setting ref="studioMonitor.monitor" name="compositeChromaBandwidth" label="Chroma Bandwidth" type="slider" options="0.0,1.0"/>
-        <setting ref="studioMonitor.monitor" name="compositeChromaCarrier" label="Chroma Carrier Frequency" type="slider" options="0.24,0.3"/>
-        <setting ref="studioMonitor.monitor" name="compositeChromaLine" label="Chroma Line Phase" type="slider" options="0.0,1.0"/>
+        <setting ref="studioMonitor.monitor" name="compositeChromaCarrier" label="Chroma Carrier" type="slider" options="0.24,0.3"/>
+        <setting ref="studioMonitor.monitor" name="compositeChromaLine" label="Chroma Line" type="slider" options="0.0,1.0"/>
     </device>
     <connector id="studioMonitor.connector" type="Composite Video"/>
     <component id="studioMonitor.monitor" class="Monitor">
